kubernetes/media-stack/arr-apps/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: servarr-ingressroute
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.local.krlab.tech`) && PathPrefix(`/radarr`)
      kind: Rule
      priority: 0
      services:
        - name: radarr
          port: 7878
    # - match: Host(`media.local.krlab.tech`) && PathPrefix(`/radarr`)
    #   kind: Rule
    #   priority: 10
    #   services:
    #     - name: radarr
    #       port: 7878
    #   middlewares:
    #     - name: default-headers
  tls:
    secretName: local-krlab-tech-tls
